WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174144
REGRESSION: Stack overflow in RenderBlockFlow::layoutBlock after increasing the font size to max in some RTL vertical books.
https://bugs.webkit.org/show_bug.cgi?id=174144
Summary
REGRESSION: Stack overflow in RenderBlockFlow::layoutBlock after increasing t...
alan
Reported
2017-07-04 18:11:15 PDT
rdar://problem/32781038
Attachments
Patch
(2.41 KB, patch)
2017-07-04 18:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.24 KB, patch)
2017-07-05 20:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-07-04 18:39:36 PDT
Created
attachment 314591
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-07-05 11:33:58 PDT
Comment on
attachment 314591
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314591&action=review
> Source/WebCore/rendering/RenderBlockLineLayout.cpp:1732 > + // Clear overhanging.
This comment isn't very useful. Maybe say more about why this is necessary?
alan
Comment 3
2017-07-05 20:45:57 PDT
Created
attachment 314689
[details]
Patch
WebKit Commit Bot
Comment 4
2017-07-05 22:49:54 PDT
Comment on
attachment 314689
[details]
Patch Clearing flags on attachment: 314689 Committed
r219190
: <
http://trac.webkit.org/changeset/219190
>
WebKit Commit Bot
Comment 5
2017-07-05 22:49:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug